MPSWAT-112: fixed people article footer on small viewport

--- a/src/documents/styles/modules/profile.css.less
+++ b/src/documents/styles/modules/profile.css.less
@@ -2,12 +2,12 @@
 
 #article-inner.reveal {
 	.profile-banner {
-		opacity: 1;
+		opacity: 0.99;
+		.translate3d(0,0,0);
 	}
 	.profile-body {
-		opacity: 1;
-		.transform(none);
-		.showBack();
+		opacity: 0.99;
+		.translate3d(0,0,0);
 	}
 }
 
@@ -42,6 +42,10 @@
 
 	@media screen and (max-width: 1350px) {
 		width: 100%;
+	}
+
+	@media screen and (max-width: 1174px) {
+		margin-bottom: -10px;
 	}
 
 	.profile-content {
